feat: SSO 인증 활성화 및 보안 강화
- SSO 인증 필터 원복 (SecurityConfig, LoginUserArgumentResolver)
- CORS 설정: 와일드카드(*) 제거, app.cors.allowed-origins 환경변수 기반 특정 Origin만 허용
- HttpOnly Cookie 기반 인증: desk_access_token 쿠키로 토큰 전달, 로그아웃 엔드포인트 추가
- 슬라이딩 세션: JwtAuthenticationFilter에서 토큰 만료 10분 전 자동 갱신

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>